--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -59,15 +59,16 @@
                          Checked="WorkSpaceButton_Clicked" GroupName="Nav_Buttons">
                <Image Source="/Assets/Terminal_dark.png"/>
             </RadioButton>
-            <RadioButton Style="{StaticResource NavigationButton}" Tag="Prompt"
-                         Checked="WorkSpaceButton_Clicked" GroupName="Nav_Buttons">
-               <Image Source="/Assets/Terminal_dark.png"/>
-            </RadioButton>
          </StackPanel>
+         
          <StackPanel Grid.Row="1" VerticalAlignment="Bottom">
             <RadioButton Name="SettingsButton" Style="{StaticResource NavigationButton}" Tag="Settings"
                          Checked="SettingsButton_Clicked" GroupName="Nav_Buttons">
                <Image Source="/Assets/Settings_dark.png"/>
+            </RadioButton>
+            <RadioButton Name="InfosButton" Style="{StaticResource NavigationButton}" Tag="Settings"
+                         Checked="InfosButton_Checked"  GroupName="Nav_Buttons">
+               <Image Source="/Assets/Info.png"/>
             </RadioButton>
          </StackPanel>
          
