--- a/UI/ThemeResources/Textbox_theme.xaml
+++ b/UI/ThemeResources/Textbox_theme.xaml
@@ -6,6 +6,7 @@
       <Setter Property="MaxHeight" Value="200"/>
       <Setter Property="Padding" Value="5,1"/>
       <Setter Property="Foreground" Value="White"/>
+      <Setter Property="CaretBrush" Value="White"/>
       <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
       <Setter Property="Template">
          <Setter.Value>
@@ -17,7 +18,7 @@
                        CornerRadius="6">
                   <Border.Effect>
                      <DropShadowEffect x:Name="GlowEffect" ShadowDepth="3" Color="{Binding BorderBrush.Color, RelativeSource={RelativeSource AncestorType={x:Type Border}}}" 
-                                       Opacity=".2" BlurRadius="15" Direction="260"/>
+                                       Opacity=".15" BlurRadius="20" Direction="260"/>
                   </Border.Effect>
                   <Border x:Name="border" Background="#323232" CornerRadius="5" 
                           SnapsToDevicePixels="True" BorderThickness="0.2,0.2,0.2,0" BorderBrush="Gray">
