--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -14,7 +14,7 @@
    <WindowChrome.WindowChrome>
       <WindowChrome CaptionHeight="35" CornerRadius="5" GlassFrameThickness="5"/>
    </WindowChrome.WindowChrome>
-   <Border Background="#1b1b1b" CornerRadius="5">
+   <Border Background="#202020" CornerRadius="5">
       <Grid>
          <Grid.RowDefinitions>
             <RowDefinition Height="35"/>
